--- a/about.html
+++ b/about.html
@@ -118,15 +118,15 @@
         </div>
     </div>
 </header>
-<div style="height: 115px"></div>
-<section id="about_content_1" class="py-4 text-center">
+<div class="fix_h_instead_bg"></div>
+<section id="about_content_1" class="text-center">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <h1 class="title_font text_gold">инвестор проекта</h1>
                 <hr>
                 <img src="img/about/verny.png" alt="" class="mw-100 py-4">
-                <p class="text_font text_black">
+                <p class="text_font text_black mb-5">
                     Заказчиком многофункционального комплекса Talan Towers выступила казахстанская
                     компания Astana Property Management, которая входит в группу Верный капитал.
                     В портфеле холдинга есть и другие успешные проекты в сфере недвижимости: отели класса -
@@ -138,10 +138,10 @@
         </div>
     </div>
 </section>
-<section id="about_content_2" class="py-4">
+<section id="about_content_2">
     <div class="container">
         <div class="row">
-            <div class="block_content text-center">
+            <div class="col-12 block_content text-center">
                 <h1 class="title_font text_gold">архитектура</h1>
                 <hr>
                 <img src="img/about/som.png" alt="" class="mw-100 py-4">
@@ -165,10 +165,14 @@
                 </div>
             </div>
         </div>
-        <div class="row py-5">
+    </div>
+</section>
+<section id="about_content_3">
+    <div class="container">
+        <div class="row">
             <div class="col-lg-6">
                 <div class="block_content">
-                    <div class="title_font text_gold" style="font-size: 1.5em">дизайн интерьеров отеля от английских архитекторов</div>
+                    <div class="title_font text_gold" style="font-size: 1.1em">дизайн интерьеров отеля от английских архитекторов</div>
                     <hr>
                     <img src="img/about/richmond.png" alt="" class="mw-100 py-4">
                     <div class="my-4 block_text text_font">
@@ -193,7 +197,7 @@
             </div>
             <div class="col-lg-6">
                 <div class="block_content">
-                    <div class="title_font text_gold" style="font-size: 1.5em">дизайн офисного пространства</div>
+                    <div class="title_font text_gold" style="font-size: 1.1em">дизайн офисного пространства</div>
                     <hr>
                     <img src="img/about/pringle.png" alt="" class="mw-100 py-4">
                     <div class="block_text text_font">
@@ -217,10 +221,10 @@
         </div>
     </div>
 </section>
-<section id="about_content_3" class="py-5 text-center">
+<section id="about_content_4" class="text-center">
     <div class="container">
-        <div class="row">
-            <div class="block_content col-12">
+        <div class="row mb-5">
+            <div class="col-12 block_content">
                 <h1 class="title_font text_gold">дизайн торговой галереи emporium</h1>
                 <hr>
                 <img src="img/about/callison.png" alt="" class="mw-100 py-4">
@@ -237,7 +241,7 @@
         </div>
 
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 mb-3">
                 <img src="img/about/leed.png" alt="" class="mw-100 py-4">
                 <h1 class="title_font text_gold">leed</h1>
                 <h1 class="title_font text_gold" style="font-size: 1.2em">(Leadership in Energy and Environmental Design)</h1>
@@ -270,12 +274,12 @@
         </div>
     </div>
 </section>
-<section id="about_content_4" class="py-5 text-center">
+<section id="about_content_5" class="text-center">
     <div class="container">
         <div class="row">
             <div class="d-block col-12">
                 <h2 class="title_font text_gold">структура объектов</h2>
-                <p class="text_font">наведите курсором на здание, чтобы рассмотреть структуру расположения объектов</p>
+                <p class="text_font mt-3">наведите курсором на здание, чтобы рассмотреть структуру расположения объектов</p>
                 <img src="img/about/tower.png" alt="" class="mw-100 py-5">
                 <p class="text_font my-4">
                     Структура многофункционального комплекса Talan Towers включает в себя объекты различного
