--- a/contacts.html
+++ b/contacts.html
@@ -118,12 +118,12 @@
         </div>
     </div>
 </header>
-<div style="height: 115px"></div>
+<div class="fix_h_instead_bg"></div>
 <section id="contacts_page">
     <div class="container">
         <div class="row no-gutters mb-5">
             <div class="col-lg-7 block_content bg_gold">
-                <h1 class="title_font text-white">
+                <h1 class="title_font text-white pt-lg-3">
                     Контакты:
                 </h1>
                 <div class="block_text text_font text-white">
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <div class="col-lg-5">
-                <img src="img/contacts/contacts-map.png" alt="" class="mw-100">
+                <img src="img/contacts/contacts-map.png" alt="" class="mw-100 w-100">
             </div>
         </div>
         <div class="row justify-content-center">
