--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
 <section id="main_content_1">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 align-self-md-center mb-3 mb-md-0">
+            <div class="col-md-5 align-self-md-center mb-3 mb-md-0">
                 <span class="text_font text_black">
                     Talan Towers – это амбициозный проект, который выводит на новый уровень качество жизни  и предоставляемых услуг в столице.
                     Здание уже стало исключительным брендом, новой достопримечательностью на карте города, символом столицы и ее растущей
                     значимости.
                 </span>
             </div>
-            <div class="col-md-6 offset-md-2">
+            <div class="col-md-6 offset-md-1">
                 <img src="img/main/main-talan.png" alt="" class="mw-100">
             </div>
         </div>
@@ -223,7 +223,7 @@
                 </div>
             </div>
             <div class="col-lg-6 order-lg-first">
-                <img src="img/main/main-empor.png" alt="" class="mw-100">
+                <img src="img/main/main-empor.jpg" alt="" class="mw-100">
             </div>
         </div>
     </div>
@@ -232,18 +232,18 @@
     <div class="container">
         <div class="row">
             <div class="text-center w-100">
-                <a href="#">
+                <a href="https://www.facebook.com/talantowers/" target="_blank">
                     <img src="img/main/footer-facebook.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://ru.linkedin.com/showcase/talan-towers" target="_blank">
                     <img src="img/main/footer-linkedin.png" alt="">
                 </a>
-                <a href="#">
+                <a href="https://instagram.com/talantowers?utm_source=ig_profile_share&igshid=1i683dwvbnp2u" target="_blank">
                     <img src="img/main/footer-instagram.png" alt="">
                 </a>
             </div>
             <div class="text-center w-100 mt-4">
-                <a href="#" class="text_font text_gold">
+                <a href="contacts.html" class="text_font text_gold">
                     Контакты
                 </a>
             </div>
