--- a/offices.html
+++ b/offices.html
@@ -157,7 +157,7 @@
         </div>
         <div class="row no-gutters mb-4">
             <div class="col-lg-6 block_content">
-                <h1 class="title_font text_gold">
+                <h1 class="title_font text_gold pt-lg-3">
                     КЛАСС А
                 </h1>
                 <div class="block_text text_font text_black">
@@ -185,9 +185,9 @@
                     Кроме того, коэффициент потерь (соотношение используемой и арендуемой площадей) составляет всего 15%, что означает возможность размещения в максимально удобном офисном пространстве. С учетом установки фальшпола, навесного потолка или других дизайнерских решений, высота потолков в готовых офисах составляет более 3 метров, благодаря чему открывается доступ  к естественному свету для 90% площади помещения, что благоприятно сказывается не только на микроклимате,  но и общем самочувствии сотрудников.
                 </div>
                 <div class="block_actionBtn text_font">
-                    <a href="#" class="text-white">
+                    <!--<a href="#" class="text-white">
                         План типового этажа
-                    </a>
+                    </a>-->
                 </div>
             </div>
             <div class="col-lg-6">
@@ -205,9 +205,9 @@
                     <br>
                     Здесь у всех арендаторов имеется возможность оборудовать офисы в формате open-space или сделать планировку с кабинетной системой.                </div>
                 <div class="block_actionBtn text_font">
-                    <a href="#" class="text_black">
+                    <!--<a href="#" class="text_black">
                         План типового этажа
-                    </a>
+                    </a>-->
                 </div>
             </div>
             <div class="col-lg-6 order-lg-first">
@@ -225,7 +225,7 @@
                     Вид на столицу, открывающийся из окон Talan Towers: панорама города на 360 градусов
                 </div>
                 <div class="mb-4">
-                    <img src="img/offices/block5.png" alt="" class="mw-100">
+                    <img src="img/offices/block5.png" alt="" class="mw-100 w-100">
                 </div>
             </div>
         </div>
@@ -246,30 +246,32 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <img src="img/offices/block6.png" alt="" class="mw-100">
+                <img src="img/offices/block6.png" alt="" class="mw-100 w-100">
             </div>
         </div>
         <div class="row no-gutters mb-5">
             <div class="col-lg-6 block_content bg_gold">
-                <h1 class="title_font text-white">
+                <h1 class="title_font text-white pt-lg-4">
                     ПАРКИНГ
                 </h1>
                 <div class="block_text text_font text-white">
-                    В здании Talan Towers Offices расположен двухуровневый подземный паркинг, доступ к которому открывается с улиц Достык и Туркестан.
-                    <br>
-                    <br>
-                    2х уровневый подземный паркинг рассчитан на 500 мест;
-                    - Уровень Р2 – парковка бизнес-центра и резиденций;
-                    - Уровень Р1 – гостевой паркинг;
-                    - Наземный паркинг на 40 мест.
-                    <br>
-                    <br>
-                    Также здесь предусмотрена «зеленая зона» для электромобилей, оснащенная бесплатными зарядными станциями. Отдельные парковочные места имеются и у любителей велосипедной езды. Для них в паркинге есть душевые и раздевалки, предоставляющие сотрудникам возможность привести себя в порядок перед началом рабочего дня.
+                    <p>
+                        В здании Talan Towers Offices расположен двухуровневый подземный паркинг, доступ к которому открывается с улиц Достык и Туркестан.
+                    </p>
+                    <p>
+                        2х уровневый подземный паркинг рассчитан на 500 мест;
+                        - Уровень Р2 – парковка бизнес-центра и резиденций;
+                        - Уровень Р1 – гостевой паркинг;
+                        - Наземный паркинг на 40 мест.
+                    </p>
+                    <p>
+                        Также здесь предусмотрена «зеленая зона» для электромобилей, оснащенная бесплатными зарядными станциями. Отдельные парковочные места имеются и у любителей велосипедной езды. Для них в паркинге есть душевые и раздевалки, предоставляющие сотрудникам возможность привести себя в порядок перед началом рабочего дня.
+                    </p>
                 </div>
                 <div class="block_actionBtn text_font">
-                    <a href="#" class="text-white">
+                    <!--<a href="#" class="text-white">
                         Планы паркинга
-                    </a>
+                    </a>-->
                 </div>
             </div>
             <div class="col-lg-6 order-lg-first">
@@ -302,7 +304,7 @@
                 </div>
             </div>
             <div class="col-lg-5">
-                <img src="img/offices/block8.png" alt="" class="mw-100">
+                <img src="img/offices/block8.png" alt="" class="mw-100 w-100">
             </div>
         </div>
         <div class="row justify-content-center">
