--- a/rc_copy.html
+++ b/rc_copy.html
@@ -163,7 +163,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <img src="img/rc_copy/mokki.png" alt="" class="mw-100 big_img">
+                <img src="img/rc_copy/mokki.jpg" alt="" class="mw-100 big_img">
             </div>
         </div>
     </div>
@@ -227,7 +227,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <img src="img/rc_copy/selfie.png" alt="" class="mw-100">
+                <img src="img/rc_copy/selfie.jpg" alt="" class="mw-100">
             </div>
         </div>
     </div>
@@ -260,7 +260,7 @@
                 </div>
             </div>
             <div class="col-lg-6 order-lg-first">
-                <img src="img/rc_copy/bar.png" alt="" class="mw-100 big_img">
+                <img src="img/rc_copy/bar.jpg" alt="" class="mw-100 big_img">
             </div>
         </div>
     </div>
