--- a/rcr.html
+++ b/rcr.html
@@ -147,8 +147,8 @@
             </div>
         </div>
         <div class="row no-gutters py-4">
-            <div class="col-lg-5 block_content bg_black">
-                <div class="block_text text_font text-white">
+            <div class="col-lg-5 block_content bg_black position-relative">
+                <div class="block_text text_font text-white pt_lg_25p">
                     Владельцам резиденций доступны такие преимущества, как
                     специальный персонал илегендарный уровень сервиса The Ritz-Carlton,
                     а также инфраструктура пятизвездочного отеля.
